2008-09-10  Michael Natterer  <mitch@gimp.org>

	* app/actions/context-actions.c: made action labels more
	consistent, use '°' instead of 'degrees'.

	* app/actions/context-commands.c: cosmetic change in macro
	parameters.

2008-09-10  Michael Natterer  <mitch@gimp.org>

	* plug-ins/file-uri/uri-backend-wget.c
	* plug-ins/file-xjt/xjt.c: s/while (1)/while (TRUE)/

2008-09-09  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/scheme-wrapper.c
	(script_fu_marshal_procedure_call): remove debug arrays to map the
	values of registered enums to strings. Look up the strings
	registered with the type system instead.

2008-09-09  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/scheme-wrapper.c: fix formatting of prototypes.

	(script_fu_marshal_procedure_call): move variables to local scopes
	where possible. Make this function a bit readable by indenting the
	debug code in DEBUG_MARSHAL normally.

2008-09-09  Michael Natterer  <mitch@gimp.org>

	* app/Makefile.am
	* plug-ins/script-fu/Makefile.am: remove references to $(REGEXREPL).

2008-09-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-psd/psd-save.c (create_merged_image): don't leak
	the GimpDrawable.

2008-09-09  Martin Nordholts  <martinn@svn.gnome.org>

	* plug-ins/file-psd/psd-save.c (save_data): Formating.

2008-09-08  Sven Neumann  <sven@gimp.org>

	* authors.xml: some more updates.

	* AUTHORS: regenerated.

2008-09-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-psd/psd-save.c: applied patch from Dennis Ranke as
	attached to bug #551231. Changes the PSD save plug-in to store
	transparency data in the image data section. Also fixes bug #551232
	(saving an indexed image with multiple layers as PSD modifies the
	image).

2008-09-08  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpbrushcore.c: based on a patch from David Gowers
	clamp the brush scale so that the brush never becomes smaller than
	0.5 pixels. Fixes bug #548631.

2008-09-08  Michael Natterer  <mitch@gimp.org>
